SERVER-6270 prevent segfault on large aggro result

to check if its getting too large, the result array must be copied later
as a result a few tests needed minor alterations